--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+no, quiero que solo añadas la modificacion a este: <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -113,6 +113,30 @@
       margin-bottom: 0.5em;
       display: block;
     }
+    .poema {
+      background: #fff8fb;
+      border: 1px solid #f2d1db;
+      border-radius: 10px;
+      margin: 1em 0;
+      padding: 1em;
+      cursor: pointer;
+      box-shadow: 1px 1px 5px rgba(0,0,0,0.05);
+      transition: background 0.3s ease;
+    }
+    .poema h3 {
+      margin: 0;
+      color: #d04e6d;
+    }
+    .poema p {
+      margin-top: 0.5em;
+      display: none;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+    .poema.open p {
+      display: block;
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
@@ -127,7 +151,7 @@
 
 <nav>
   <a href="#inicio">Inicio</a>
-  <a href="poemas.html" target="_blank">Poemas</a>
+  <a href="#poemas">Poemas</a>
   <a href="#dibujos">Galería de Dibujos</a>
   <a href="#mensajes">Mensajes Especiales</a>
 </nav>
@@ -136,9 +160,21 @@
   <h2>Bienvenida, mi amor</h2>
   <p>Este es tu espacio especial, creado con todo mi cariño. Toca una de las secciones para descubrir lo que tengo para ti.</p>
   <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2em; margin-top: 2em;">
-    <a class="inicio-link" href="poemas.html" target="_blank"><span class="inicio-icon">📜</span>Poemas</a>
+    <a class="inicio-link" href="#poemas"><span class="inicio-icon">📜</span>Poemas</a>
     <a class="inicio-link" href="#dibujos"><span class="inicio-icon">🎨</span>Dibujos</a>
     <a class="inicio-link" href="#mensajes"><span class="inicio-icon">💌</span>Mensajes</a>
+  </div>
+</section>
+
+<section id="poemas">
+  <h2>Poemas</h2>
+  <div class="poema" onclick="togglePoema(this)">
+    <h3>Tu Sonrisa</h3>
+    <p>Tu sonrisa ilumina mis días como el sol tras la lluvia, cálida, tierna y eterna.</p>
+  </div>
+  <div class="poema" onclick="togglePoema(this)">
+    <h3>Versos para Ti</h3>
+    <p>Cada verso que escribo nace de ti, de tu mirada, de tu risa, de lo que me haces sentir.</p>
   </div>
 </section>
 
@@ -210,6 +246,14 @@
     }
   }
 
+  function togglePoema(element) {
+    const isOpen = element.classList.contains("open");
+    document.querySelectorAll(".poema").forEach(p => p.classList.remove("open"));
+    if (!isOpen) {
+      element.classList.add("open");
+    }
+  }
+
   window.addEventListener("hashchange", () => {
     const id = location.hash.replace("#", "") || "inicio";
     showSection(id);
@@ -223,3 +267,4 @@
 
 </body>
 </html>
+
