--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-no, quiero que solo añadas la modificacion a este: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
