--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Para Ti</title>
+  <title>El Museo de Ash</title>
   <style>
     body {
       font-family: Verdana, sans-serif;
@@ -147,7 +147,7 @@
   <button onclick="cerrarModal()">Entrar</button>
 </div>
 
-<header>Para Ti</header>
+<header>El Espacio de Ash</header>
 
 <nav>
   <a href="#inicio">Inicio</a>
