--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
 
 <section id="dibujos">
   <h2>Galería de Dibujos</h2>
-  <img src="imagenes/dibujo1.jpg" alt="Dibujo 1" style="max-width: 100%; border-radius: 10px; margin-bottom: 1em;">
-  <img src="imagenes/dibujo2.jpg" alt="Dibujo 2" style="max-width: 100%; border-radius: 10px; margin-bottom: 1em;">
+   <img src="https://github.com/usuario/repo/raw/main/imagenes/dibujo1.jpg" alt="Dibujo 1" style="max-width: 100%; border-radius: 10px; margin-bottom: 1em;">
 </section>
 
 <section id="mensajes">
