--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <button onclick="cerrarModal()">Entrar</button>
 </div>
 
-<header>El Espacio de Ash</header>
+<header>El Museo de Ash</header>
 
 <nav>
   <a href="#inicio">Inicio</a>
