--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>El Museo de Ash</title>
+  <title>Para Ti</title>
   <style>
     body {
       font-family: Verdana, sans-serif;
@@ -81,18 +81,6 @@
       font-size: 0.9em;
       color: #888;
     }
-    #audio-control {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
-      background: #f9c6d4;
-      color: white;
-      border: none;
-      padding: 0.6em 1em;
-      border-radius: 20px;
-      cursor: pointer;
-      z-index: 1000;
-    }
     .inicio-link {
       background: white;
       border-radius: 15px;
@@ -147,7 +135,7 @@
   <button onclick="cerrarModal()">Entrar</button>
 </div>
 
-<header>El Museo de Ash</header>
+<header>Para Ti</header>
 
 <nav>
   <a href="#inicio">Inicio</a>
@@ -180,53 +168,21 @@
 
 <section id="dibujos">
   <h2>Galería de Dibujos</h2>
-   <img src="https://github.com/rvalle2001/repo/raw/main/imagenes/dibujo1.jpg" alt="Dibujo 1" style="max-width: 100%; border-radius: 10px; margin-bottom: 1em;">
+  <img src="imagenes/dibujo1.jpg" alt="Dibujo 1" style="max-width: 100%; border-radius: 10px; margin-bottom: 1em;">
+  <img src="imagenes/dibujo2.jpg" alt="Dibujo 2" style="max-width: 100%; border-radius: 10px; margin-bottom: 1em;">
 </section>
 
 <section id="mensajes">
   <h2>Mensajes Especiales</h2>
   <p>Palabras que vienen directamente de mi corazón.</p>
-  <audio controls>
-    <source src="mensajes/mensaje1.mp3" type="audio/mpeg">
-    Tu navegador no soporta audio HTML5.
-  </audio>
 </section>
 
-<button id="audio-control">Reproducir música</button>
-
 <footer>Hecho con amor para ti</footer>
-
-<audio id="bg-music" loop>
-  <source src="https://github.com/rvalle2001/repo/raw/main/musica/inicio.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio HTML5.
-</audio>
 
 <script>
   function cerrarModal() {
     document.getElementById("bienvenida").style.display = "none";
   }
-
-  const music = document.getElementById("bg-music");
-  const btn = document.getElementById("audio-control");
-
-  btn.addEventListener("click", () => {
-    if (music.paused) {
-      music.play();
-      btn.textContent = "Pausar música";
-    } else {
-      music.pause();
-      btn.textContent = "Reproducir música";
-    }
-  });
-
-  const musicTracks = {
-    inicio: "https://github.com/rvalle2001/repo/raw/main/musica/inicio.mp3",
-    poemas: "https://github.com/rvalle2001/repo/raw/main/musica/poemas.mp3",
-    dibujos: "https://github.com/rvalle2001/repo/raw/main/musica/dibujos.mp3",
-    mensajes: "https://github.com/rvalle2001/repo/raw/main/musica/mensajes.mp3"
-  };
-
-  let currentSection = "inicio";
 
   function showSection(id) {
     document.querySelectorAll("section").forEach(sec => {
@@ -235,13 +191,6 @@
     const section = document.getElementById(id);
     if (section) {
       section.classList.add("active");
-    }
-
-    if (musicTracks[id] && id !== currentSection) {
-      music.src = musicTracks[id];
-      music.play();
-      btn.textContent = "Pausar música";
-      currentSection = id;
     }
   }
 
