--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
       padding: 1em;
       font-size: 0.9em;
       color: #888;
+      background: #f9c6d4;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      left: 0;
+      z-index: 999;
     }
     .inicio-link {
       background: white;
@@ -124,6 +130,15 @@
     .poema.open p {
       display: block;
       opacity: 1;
+    }
+    #inicio {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+      height: 100vh; /* Full viewport height */
+      margin: 0;
     }
   </style>
 </head>
