--- a/index.html
+++ b/index.html
@@ -80,12 +80,10 @@
       padding: 1em;
       font-size: 0.9em;
       color: #888;
-      background: #f9c6d4;
       position: fixed;
-      bottom: 0;
       width: 100%;
-      left: 0;
-      z-index: 999;
+      bottom: 0;
+      background: #f9c6d4;
     }
     .inicio-link {
       background: white;
@@ -131,14 +129,13 @@
       display: block;
       opacity: 1;
     }
-    #inicio {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    /* Estilos para centrar el contenido en la página de inicio */
+    #inicio h2, #inicio p {
       text-align: center;
-      height: 100vh; /* Full viewport height */
-      margin: 0;
+    }
+    #inicio .inicio-link {
+      margin: 1em auto;
+      text-align: center;
     }
   </style>
 </head>
