--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
     
     .galeria {
       display: flex;
-      justify-content: center;
-      gap: 1em;
-      flex-wrap: wrap;
+      flex-direction: column; /* Cambio para apilar las imágenes */
+      gap: 1em; /* Espacio entre las imágenes */
       align-items: center;
     }
     
