--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Para Ti</title>
+  <title>El Museo de Ash💗</title>
   <style>
     body {
       font-family: Verdana, sans-serif;
@@ -161,11 +161,11 @@
 
 <div id="bienvenida">
   <h2>Bienvenida, mi amor</h2>
-  <p>He creado este espacio solo para ti, con todo mi corazón.</p>
+  <p>He creado este espacio solo para ti, con todo mi corazón.💗</p>
   <button onclick="cerrarModal()">Entrar</button>
 </div>
 
-<header>Para Ti</header>
+<header>El Museo de Ash💗</header>
 
 <nav>
   <a href="#inicio">Inicio</a>
@@ -187,20 +187,62 @@
 <section id="poemas">
   <h2>Poemas</h2>
   <div class="poema" onclick="togglePoema(this)">
-    <h3>Tu Sonrisa</h3>
-    <p>Tu sonrisa ilumina mis días como el sol tras la lluvia, cálida, tierna y eterna.</p>
+    <h3>Brisa de Luz</h3>
+    <p>En la brisa de la tarde su risa florece,
+un eco dorado que el alma estremece.
+Su cabello, ríos de rizos danzantes,
+juega con el viento en giros vibrantes.
+
+Sus ojos, estrellas en un cielo cercano,
+destellos de luna en un mundo lejano.
+Brillan, inquietos, con dulce fulgor,
+como faros que guían mi errante temor.
+
+Y su sonrisa, un alba sincera,
+llena de vida, radiante y ligera.
+Como un susurro que calma el dolor,
+como un latido que enciende el amor.
+
+Si el tiempo me diera un instante en su cielo,
+sería un viajero sin miedo ni duelo.
+Pues en su mirada y en su alegría,
+hallé la luz que mi alma quería.</p>
   </div>
   <div class="poema" onclick="togglePoema(this)">
-    <h3>Versos para Ti</h3>
-    <p>Cada verso que escribo nace de ti, de tu mirada, de tu risa, de lo que me haces sentir.</p>
+    <h3>Ella, la Danza y el Fuego</h3>
+    <p>Ella camina con la calma de quien enseña no solo con palabras, sino con el alma. Es maestra de días y noches, de letras y silencios, de paciencia infinita que no se quiebra, solo se moldea. Mira con ternura, con esa dulzura que se oculta detrás de una apariencia serena, como si fuera brisa y tormenta al mismo tiempo.
+
+
+Su piel de luna guarda secretos que pocos descubren. Se hace la fría, la distante, como el invierno que toca sin quemar, pero en su pecho arde un fuego que solo los ojos atentos pueden ver. En ella habita la intensidad de un relámpago, de esos que iluminan la noche y dejan huella en el cielo.
+Baila, y cuando lo hace, el aire se llena de su esencia. No son solo pasos, es una confesión en movimiento, un susurro del alma que se vuelve melodía. Su alegría no es solo risa; es un brillo que se esconde entre gestos, un fulgor que, sin darse cuenta, enciende a los que la rodean.
+
+
+Sensible como el agua que acaricia la orilla, pero fuerte como la marea que regresa sin miedo. En su voz hay calma, en su mirada hay historia, en su sonrisa hay una puerta que pocos saben cruzar. Y quien la cruce, quien logre descifrar el enigma de su fuego y su hielo, sabrá que en ella habita un universo entero.
+
+</p>
   </div>
+  <div class="poema" onclick="togglePoema(this)">
+    <h3>Antes de que sepas que existo</h3>
+    <p>Te he visto sin que me veas, en la distancia sutil de las pantallas, en las palabras que lanzas al aire sin saber que alguien las guarda. Te he leído entre líneas, en los gestos que compartes con el mundo, en las pequeñas cosas que te hacen única y que, sin querer, me han llevado hasta aquí.
+
+
+No sabes que existo, pero ya he aprendido a reconocerte en los detalles. En la manera en que hablas de lo que amas, en la luz que se filtra en tu sonrisa, en la esencia de lo que eres sin esfuerzo. Y aunque aún no hemos cruzado miradas en el mismo espacio, ya hay un hilo invisible que, de algún modo, me hace sentir más cerca de ti.
+
+
+No tengo prisa. El tiempo se encargará de dibujar el momento en que nuestros caminos se crucen, en que mi voz deje de ser un eco en la sombra y mi presencia se convierta en parte de tu historia. Hasta entonces, seguiré aquí, admirando desde lejos, dejando que este sentimiento crezca en los rincones donde todavía no ha encontrado palabras.
+
+
+
+</p>
+  </div>
+  
 </section>
 
 <section id="dibujos">
   <h2>Galería de Dibujos</h2>
   <div class="galeria">
     <img src="imagenes/dibujo1.jpg" alt="Dibujo 1">
-    <img src="imagenes/dibujo2.jpg" alt="Dibujo 2">
+  
   </div>
 </section>
 
@@ -209,7 +251,7 @@
   <p>Palabras que vienen directamente de mi corazón.</p>
 </section>
 
-<footer>Hecho con amor para ti</footer>
+<footer>Hecho con amor para ti por Randall Valle.</footer>
 
 <script>
   function cerrarModal() {
