--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 <div id="bienvenida">
   <h2>Bienvenida, mi amor</h2>
-  <p>He creado este espacio solo para ti, con todo mi corazón.💗</p>
+  <p>He creado este espacio solo para ti, con todo mi corazón.</p>
   <button onclick="cerrarModal()">Entrar</button>
 </div>
 
