--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@ No tengo prisa. El tiempo se encargará de dibujar el momento en que nuestros ca
   <div class="galeria">
     <img src="imagenes/dibujo1.jpg" alt="Dibujo 1">
     <img src="imagenes/dibujo2.jpg" alt="Dibujo 2">
-  
+    <img src="imagenes/dibujo3.jpg" alt="Dibujo 3">
+    
   </div>
 </section>
 
