--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ No tengo prisa. El tiempo se encargará de dibujar el momento en que nuestros ca
 
 </p>
   </div>
-  div class="poema" onclick="togglePoema(this)">
+  <div class="poema" onclick="togglePoema(this)">
     <h3>En el eco de su mirada</h3>
   <p>Cada vez que la veo, el mundo se reduce a un instante. Sus ojos, tan llenos de vida y misterio, parecen hablarme sin decir una sola palabra. Hay algo en su mirada que me atrapa, un destello que ilumina hasta lo más oscuro de mí. Me encuentro atrapado, no por su belleza, sino por la paz que me da, esa paz que solo ella sabe regalar con un simple gesto.
 
@@ -244,8 +244,8 @@ Es como si el tiempo se aligerara cuando está cerca, como si las horas se estir
 Y cuando parece distante, cuando se hace fría, algo dentro de mí me empuja a acercarme, como si supiera que allí, en ese misterio, hay una intensidad que me llama. No la entiendo completamente, pero es precisamente esa mezcla de calma y fuego lo que me hace querer descubrir más, ir más allá de lo que ella deja ver.
 
 Al estar cerca de ella, siento que el mundo se vuelve más claro, que cada latido tiene sentido. Hay algo en su presencia que me da fuerza, y a la vez, me deja vulnerable. Y aunque nunca lo diga, su cercanía me recuerda que la vida tiene momentos que valen más que mil palabras.
-</p>
-  
+   </p>
+  </div>  
 </section>
 
 <section id="dibujos">
