--- a/index.html
+++ b/index.html
@@ -260,7 +260,10 @@ Al estar cerca de ella, siento que el mundo se vuelve más claro, que cada latid
 
 <section id="mensajes">
   <h2>Mensajes Especiales</h2>
-  <p>Palabras que vienen directamente de mi corazón.</p>
+  <p>Nuestra canción🩷</p>
+  audio autoplay hidden>
+  <source src="https://cdn.discordapp.com/attachments/793748541511434240/1359032512864718858/Sleeping_At_Last_TURNING_PAGE_sub_espanol-_ingles.mp3?ex=67f60128&is=67f4afa8&hm=ca9ae5e2d1ab79188391f73f110eb8dd60d5c370bb673528c4112ba38410418c" type="audio/mpeg">
+</audio>
 </section>
 
 <footer>Hecho con amor para ti por Randall Valle.</footer>
