--- a/index.html
+++ b/index.html
@@ -245,7 +245,13 @@ Y cuando parece distante, cuando se hace fría, algo dentro de mí me empuja a a
 
 Al estar cerca de ella, siento que el mundo se vuelve más claro, que cada latido tiene sentido. Hay algo en su presencia que me da fuerza, y a la vez, me deja vulnerable. Y aunque nunca lo diga, su cercanía me recuerda que la vida tiene momentos que valen más que mil palabras.
    </p>
-  </div>  
+  </div>
+  <div class="poema" onclick="togglePoema(this)">
+    <h3>Estás y eso basta</h3>
+    <p>No sé en qué momento exacto te volviste mi pensamiento favorito, pero desde entonces, cada cosa hermosa me recuerda a ti. No necesito cerrar los ojos para imaginarte, porque estás presente en cada rincón de mi día, en el silencio y en el bullicio, en la calma y en el caos. Estás. Y eso basta.
+
+Me gustas sin fórmulas, sin condiciones. Me gustas por cómo eres, por cómo haces que el mundo se sienta menos frío y más sincero. Contigo estoy aprendiendo que el amor no siempre grita, a veces susurra, a veces solo mira... y se queda. Como tú, que llegaste y no te fuiste. Y ojalá no lo hagas nunca.</p>
+  </div>
 </section>
 
 <section id="dibujos">
