--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@ Me gustas sin fórmulas, sin condiciones. Me gustas por cómo eres, por cómo ha
     <img src="imagenes/dibujo1.jpg" alt="Dibujo 1">
     <img src="imagenes/dibujo2.jpg" alt="Dibujo 2">
     <img src="imagenes/dibujo3.jpg" alt="Dibujo 3">
+    <img src="imagenes/dibujo4.jpg" alt="Dibujo 4">
+    <img src="imagenes/dibujo5.jpg" alt="Dibujo 5">
+    <img src="imagenes/dibujo6.jpg" alt="Dibujo 6">
     
   </div>
 </section>
